--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,9 @@ body {
   background: #f9f9f9;
   color: #000;
   overflow-x: hidden;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 h1 {
